...
    FocusNode focusNode,
    BuildContext context,
  ) {
    return SearchBar(
      controller: textController,
      focusNode: focusNode,
      hintText: 'Search news...',
      leading: const Icon(Icons.search),
      trailing: [buildClearSearchButton()],
      elevation: WidgetStateProperty.all(2),
      padding: WidgetStateProperty.all(
        const EdgeInsets.symmetric(horizontal: 16),
      ),
...
